--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.45) unstable; urgency=low
+
+  * Bug #49960: Add test exam_mode_restrict_login
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Wed, 04 Sep 2019 15:12:03 +0200
+
 ucs-test-ucsschool (6.0.44) unstable; urgency=low
 
   * Bug #49311: Test for SchoolComputer.lookup
