--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.47) unstable; urgency=low
+
+  * Bug #50116: add test for fix_ucschool_slaves
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 06 Sep 2019 11:24:07 +0200
+
 ucs-test-ucsschool (6.0.46) unstable; urgency=low
 
   * Bug #50087: fix test
