--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.48) unstable; urgency=low
+
+  * Bug #50117: fix fix_ucsschool_slaves
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 09 Sep 2019 10:18:52 +0200
+
 ucs-test-ucsschool (6.0.47) unstable; urgency=low
 
   * Bug #50116: add test for fix_ucschool_slaves
