--- a/ucs-school-webproxy/debian/changelog
+++ b/ucs-school-webproxy/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-webproxy (15.0.0-1) unstable; urgency=low
+
+  * Bug #50197: fix missing UCR headers
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 16 Sep 2019 13:36:11 +0200
+
 ucs-school-webproxy (15.0.0-0) unstable; urgency=low
 
   * bump version for UCS@school 4.4
