--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-16) unstable; urgency=low
+
+  * Bug #49902: fix KeyError
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 16 Sep 2019 16:05:07 +0200
+
 ucs-school-umc-exam (9.0.1-15) unstable; urgency=medium
 
    * Bug #49960: Add login restrictions for exam and original users
