--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.50) unstable; urgency=medium
+
+  * Bug #50008: Add tests for class/teacher assignment
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 17 Sep 2019 11:14:18 +0200
+
 ucs-test-ucsschool (6.0.49) unstable; urgency=low
 
   * Bug #49907: Add selenium test to test ending of exams in computerroom module
