--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (6.0.51) unstable; urgency=medium
+
+  * Bug 50008: Execute 55_class_assignment.py/56_teacher_assignment.py only on
+    master
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 18 Sep 2019 13:45:14 +0200
+
 ucs-test-ucsschool (6.0.50) unstable; urgency=medium
 
   * Bug #50008: Add tests for class/teacher assignment
