--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.56) unstable; urgency=medium
+
+  * Bug #50009: test computerrom with umlauts
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 19 Sep 2019 20:35:51 +0200
+
 ucs-test-ucsschool (6.0.55) unstable; urgency=medium
 
   * Bug #50008: fix 55_class_assignment.py/56_teacher_assignment.py for slaves
