--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.54) unstable; urgency=low
+
+  * Issue #22159: add tests for moving users to other OUs
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 19 Sep 2019 16:45:10 +0200
+
 ucs-test-ucsschool (6.0.53) unstable; urgency=low
 
   * Bug #50229: remove OUs *AND* their children in 999_delete_test_ous
