--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.57) unstable; urgency=low
+
+  * Bug #50229: remove OUs *AND* their children in 999_delete_test_ous
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 20 Sep 2019 16:01:00 +0200
+
 ucs-test-ucsschool (6.0.56) unstable; urgency=medium
 
   * Bug #50009: test computerrom with umlauts
