--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.58) unstable; urgency=low
+
+  * Bug #50229: remove OUs *AND* their children in 999_delete_test_ous
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 23 Sep 2019 10:52:19 +0200
+
 ucs-test-ucsschool (6.0.57) unstable; urgency=low
 
   * Bug #50229: remove OUs *AND* their children in 999_delete_test_ous
