--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-metapackage (12.0.2-5) unstable; urgency=low
+
+  * Bug #48752: create containers "Managed Service Accounts" and "PSPs" before
+    provisioning samba
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 26 Sep 2019 10:37:35 +0200
+
 ucs-school-metapackage (12.0.2-4) unstable; urgency=low
 
   * Bug #49531: set OC for demo_admin
