--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (11.0.0-7) unstable; urgency=medium
+
+  * Bug #50296: improve text for closing dialog
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Tue, 01 Oct 2019 10:04:12 +0200
+
 ucs-school-umc-computerroom (11.0.0-6) unstable; urgency=medium
 
   * Bug #50009: fix computerroom module crash on rooms with umlauts
