--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.62) unstable; urgency=low
+
+  * Issue #22159: test modify with empty school_class attribute
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 04 Oct 2019 22:34:45 +0200
+
 ucs-test-ucsschool (6.0.61) unstable; urgency=medium
 
   * Bug #50286: 90_ucsschool/22_computerroom_module_settings
