--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (17.0.14) unstable; urgency=medium
+
+  * Bug #50326: migrate from python-support to dh_python
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 02 Oct 2019 17:11:35 +0200
+
 ucs-school-import (17.0.13) unstable; urgency=low
 
   * Bug #50116: fix traceback in fix_ucschool_slaves if a slave is no
