--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.66) unstable; urgency=medium
+
+  * Bug #50286: fix 90_ucsschool/22_computerroom_module_settings
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 16 Oct 2019 17:24:33 +0200
+
 ucs-test-ucsschool (6.0.65) unstable; urgency=medium
 
   * Bug #50037: Add test case 115_modify_userattributes_and_ldap_acl
