--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.68) unstable; urgency=low
+
+  * Bug #50087: ignore order when comparing lists
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 21 Oct 2019 21:07:19 +0200
+
 ucs-test-ucsschool (6.0.67) unstable; urgency=medium
 
   * Bug #50364: 90_ucsschool/19_available_umc_modules ignore selfservice
