--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.69) unstable; urgency=low
+
+  * Bug #50366: install tests for id-sync app
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 22 Oct 2019 08:41:40 +0200
+
 ucs-test-ucsschool (6.0.68) unstable; urgency=low
 
   * Bug #50087: ignore order when comparing lists
