--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.70) unstable; urgency=low
+
+  * Bug #50366: update paths of tests
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 22 Oct 2019 12:39:51 +0200
+
 ucs-test-ucsschool (6.0.69) unstable; urgency=low
 
   * Bug #50366: install tests for id-sync app
