--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.72) unstable; urgency=low
+
+  * Bug #50274: add 75_ldap_acls_staff_on_edu_servers
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 29 Oct 2019 11:01:32 +0100
+
 ucs-test-ucsschool (6.0.71) unstable; urgency=low
 
   * Bug #50416: add test for school class changes
