--- a/ucs-school-roleshares/debian/changelog
+++ b/ucs-school-roleshares/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-roleshares (7.0.0-2) unstable; urgency=low
+
+  * Bug #47418: remove UMC code from schoolldap module
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 01 Nov 2019 21:39:40 +0100
+
 ucs-school-roleshares (7.0.0-1) unstable; urgency=low
 
   * Bug 47076: support bindpwdfile join script argument
