--- a/ucs-school-s4-branch-site/debian/changelog
+++ b/ucs-school-s4-branch-site/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-s4-branch-site (7.0.0-1) unstable; urgency=low
+
+  * Bug #47418: remove UMC code from schoolldap module
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 01 Nov 2019 21:39:40 +0100
+
 ucs-school-s4-branch-site (7.0.0-0) unstable; urgency=medium
 
   * bump version for UCS@school 4.4
