--- a/ucs-school-umc-distribution/debian/changelog
+++ b/ucs-school-umc-distribution/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-distribution (17.0.1-6) unstable; urgency=low
+
+  * Bug #47418: remove UMC code from schoolldap module
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 01 Nov 2019 21:46:00 +0100
+
 ucs-school-umc-distribution (17.0.1-5) unstable; urgency=low
 
   * Bug #49637: Improve exam mode
