--- a/ucs-school-umc-groups/debian/changelog
+++ b/ucs-school-umc-groups/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-groups (9.0.0-2) unstable; urgency=low
+
+  * Bug #47418: remove UMC code from schoolldap module
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 01 Nov 2019 21:39:41 +0100
+
 ucs-school-umc-groups (9.0.0-1) unstable; urgency=medium
 
   * Bug #50008: Fix class assignment for multi school environments
