--- a/ucs-school-umc-internetrules/debian/changelog
+++ b/ucs-school-umc-internetrules/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-internetrules (15.0.0-1) unstable; urgency=low
+
+  * Bug #47418: remove UMC code from schoolldap module
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 01 Nov 2019 21:39:41 +0100
+
 ucs-school-umc-internetrules (15.0.0-0) unstable; urgency=medium
 
   * bump version for UCS@school 4.4
