--- a/ucs-school-roleshares/debian/changelog
+++ b/ucs-school-roleshares/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-roleshares (7.0.0-3) unstable; urgency=low
+
+  * Bug #47418: fix import
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Nov 2019 08:12:17 +0100
+
 ucs-school-roleshares (7.0.0-2) unstable; urgency=low
 
   * Bug #47418: remove UMC code from schoolldap module
