--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,8 +1,8 @@
-ucs-test-ucsschool (6.0.74) unstable; urgency=low
+ucs-test-ucsschool (6.0.75) unstable; urgency=low
 
-  * Bug #47418: fix import
+  * Bug #47418: remove UMC code from schoolldap module
 
- -- Daniel Troeder <troeder@univention.de>  Mon, 04 Nov 2019 08:11:33 +0100
+ -- Daniel Troeder <troeder@univention.de>  Mon, 04 Nov 2019 08:11:34 +0100
 
 ucs-test-ucsschool (6.0.73) unstable; urgency=low
 
