--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.76) unstable; urgency=low
+
+  * Bug #50457: app was renamed
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 07 Nov 2019 08:26:29 +0100
+
 ucs-test-ucsschool (6.0.75) unstable; urgency=low
 
   * Bug #47418: remove UMC code from schoolldap module
