--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.81) unstable; urgency=low
+
+  * Bug #50462: fix install error
+
+ -- Ole Schwiegert <schwiegert@univention.de>  Fri, 08 Nov 2019 09:53:22 +0100
+
 ucs-test-ucsschool (6.0.80) unstable; urgency=low
 
   * Bug #50462: renaming test sections for bb api and clone for kelvin
