--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.82) unstable; urgency=medium
+
+  * Bug #50274: Adjust 55_class_assignment.py to changed ACL
+
+ -- Jürn Brodersen <brodersen@univention.de>  Fri, 08 Nov 2019 10:53:08 +0100
+
 ucs-test-ucsschool (6.0.81) unstable; urgency=low
 
   * Bug #50462: fix install error
