--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.83) unstable; urgency=medium
+
+  * Bug #50473: fix 115_modify_userattributes_and_ldap_acl for upgrades from 4.3
+
+ -- Jürn Brodersen <brodersen@univention.de>  Fri, 08 Nov 2019 12:42:52 +0100
+
 ucs-test-ucsschool (6.0.82) unstable; urgency=medium
 
   * Bug #50274: Adjust 55_class_assignment.py to changed ACL
