--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-21) unstable; urgency=low
+
+  * Bug #49961: fix syntax error in postinst
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 13 Nov 2019 12:19:59 +0100
+
 ucs-school-umc-exam (9.0.1-20) unstable; urgency=low
 
   * Bug #49961: fix postinst
