Bug #49970: send wake-on-LAN packets on all interfaces (now python-based)

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (11.0.0-12) unstable; urgency=low
+
+  * Bug #49970: use python code to send wake-on-LAN packets
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 15 Nov 2019 16:51:57 +0100
+
 ucs-school-umc-computerroom (11.0.0-11) unstable; urgency=low
 
   * Bug #49961: Create UCRV to toggle PC restart screen during exam start
