--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.85) unstable; urgency=low
+
+  * Bug #50513: wait for s4connector after deleting objects
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 18 Nov 2019 15:45:41 +0100
+
 ucs-test-ucsschool (6.0.84) unstable; urgency=medium
 
   * Bug #50462: fix import error in new kelvin tests
