--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (9.0.1-22) unstable; urgency=low
+
+  * Bug #50588: cache exam container per OU
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 04 Dec 2019 09:14:56 +0100
+
 ucs-school-umc-exam (9.0.1-21) unstable; urgency=low
 
   * Bug #49961: fix syntax error in postinst
