--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (12.0.2-6) unstable; urgency=low
+
+  * Bug #50280: Dont set userAccountControl in slave joinscript anymore since Bug 47942 has been resolved
+
+ -- Julia Bremer <bremer@univention.de>  Thu, 05 Dec 2019 12:00:36 +0100
+
 ucs-school-metapackage (12.0.2-5) unstable; urgency=low
 
   * Bug #48752: create containers "Managed Service Accounts" and "PSPs" before
