--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.86) unstable; urgency=medium
+
+  * Bug #50687: fix importou.py dhcp subnet creation
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 06 Jan 2020 17:19:10 +0100
+
 ucs-test-ucsschool (6.0.85) unstable; urgency=low
 
   * Bug #50513: wait for s4connector after deleting objects
