Bug #50594: adjust test case for new texts in login dialog

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.87) unstable; urgency=medium
+
+  * Bug #50594: adjust test case for new texts in login dialog
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 07 Jan 2020 17:31:57 +0100
+
 ucs-test-ucsschool (6.0.86) unstable; urgency=medium
 
   * Bug #50687: fix importou.py dhcp subnet creation
