--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (6.0.90) unstable; urgency=low
+
+  * Bug #50678: add tests for linting
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 16 Jan 2020 09:27:33 +0100
+
 ucs-test-ucsschool (6.0.89) unstable; urgency=medium
 
   * Bug #50678: 94_ucsschool-api-kelvin/10_run_supplied_tests
